--- a/MattParty/app/src/main/res/values/strings.xml
+++ b/MattParty/app/src/main/res/values/strings.xml
@@ -34,4 +34,24 @@
     <string name="counter">counter</string>
     <string name="_12">12</string>
     <string name="_12_12_59_59">12 12:59:59</string>
+    <string name="countdownleft">till the PARTY!</string>
+    <string name="countdown">There are only:</string>
+    <string name="title_activity_when">WhenActivity</string>
+    <string name="title_activity_sign_up">Sign in</string>
+
+    <!-- Strings related to login -->
+    <string name="prompt_email">Email</string>
+    <string name="prompt_password">Password (optional)</string>
+    <string name="action_sign_in">Sign in or register</string>
+    <string name="action_sign_in_short">Sign in</string>
+    <string name="error_invalid_email">This email address is invalid</string>
+    <string name="error_invalid_password">This password is too short</string>
+    <string name="error_incorrect_password">This password is incorrect</string>
+    <string name="error_field_required">This field is required</string>
+    <string name="permission_rationale">"Contacts permissions are needed for providing email
+        completions."
+    </string>
+    <string name="likely_mode_of_transport">Likely Mode of Transport</string>
+    <string name="number_of_people">Number of People</string>
+    <string name="song_request">Song request</string>
 </resources>
