--- a/MattParty/app/src/main/res/values/strings.xml
+++ b/MattParty/app/src/main/res/values/strings.xml
@@ -11,25 +11,25 @@
     <string name="info">Info</string>
     <string name="address">Address:</string>
     <string name="how_to_get_there">How to get there:</string>
-    <string name="_68_finchfield_road_west">68 Finchfield Road West \nWV3 8BA</string>
-    <string name="bus_no_3_from_town"> Bus no. 3 from Town</string>
-    <string name="drive_limited_parking_available">Drive (Limited parking available)</string>
+    <string name="_68_finchfield_road_west">68 Finchfield Road West. \nWV3 8BA\n </string>
+    <string name="bus_no_3_from_town"> Bus no. 3 from Town.\n </string>
+    <string name="drive_limited_parking_available">Drive \n(Limited parking available)\n </string>
     <string name="what_is_on">What is on?</string>
     <string name="textview">TextView</string>
-    <string name="fibbage">Fibbage</string>
-    <string name="shots_and_ladders_xl">Shots and Ladders XL</string>
-    <string name="bbq">BBQ</string>
-    <string name="live_music">Live Music</string>
-    <string name="can_i_bring_alcohol">Can I bring Alcohol?</string>
-    <string name="the_more_the_merrier">The more the merrier!</string>
+    <string name="fibbage">Fibbage\n </string>
+    <string name="shots_and_ladders_xl">Shots and Ladders XL\n </string>
+    <string name="bbq">BBQ\n </string>
+    <string name="live_music">Live Music\n </string>
+    <string name="can_i_bring_alcohol">Can I bring Alcohol? </string>
+    <string name="the_more_the_merrier">The more the merrier!\n </string>
     <string name="what_time_should_i_arrive">What time should I arrive?</string>
-    <string name="the_event_is_from_3pm_till_late">The event is from 3PM \ntill Late.</string>
+    <string name="the_event_is_from_3pm_till_late">The event is from 3PM \ntill Late.\n </string>
     <string name="done">Done</string>
-    <string name="seconds">seconds</string>
+    <string name="seconds">Seconds</string>
     <string name="countleft">countleft</string>
-    <string name="minutes">minutes</string>
-    <string name="hours">hours</string>
-    <string name="days">days</string>
+    <string name="minutes">Minutes</string>
+    <string name="hours">Hours</string>
+    <string name="days">Days</string>
     <string name="worldcup_2k19">Cinco De Matt-o PARTY</string>
     <string name="counter">counter</string>
     <string name="_12">12</string>
@@ -42,7 +42,7 @@
     <!-- Strings related to login -->
     <string name="prompt_email">Email</string>
     <string name="prompt_password">Password (optional)</string>
-    <string name="action_sign_in">Sign in or register</string>
+    <string name="action_sign_in">Register</string>
     <string name="action_sign_in_short">Sign in</string>
     <string name="error_invalid_email">This email address is invalid</string>
     <string name="error_invalid_password">This password is too short</string>
@@ -53,5 +53,5 @@
     </string>
     <string name="likely_mode_of_transport">Likely Mode of Transport</string>
     <string name="number_of_people">Number of People</string>
-    <string name="song_request">Song request</string>
+    <string name="song_request">Song request (eg. Reapers by Muse)</string>
 </resources>
